--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Learn Javascript fundamentals</h1>
-    <p id="demo"></p>
+    <p id="demo">Hello Javascript!</p>
     <script src="/main.js"></script>
   </body>
 </html>
