Modify value let const

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Learn Javascript fundamentals</h1>
     <p id="demo">Hello Javascript!</p>
+    <p id="demo1"></p>
     <script src="/main.js"></script>
   </body>
 </html>
